force-app/main/default/src/objects/Lead_Convert_Child_Mapping_MVN__mdt/Lead_Convert_Child_Mapping_MVN__mdt.object-meta.xml
<CustomObject>
    <description>When a lead is converted to an account its children should also be mapped. These settings define the objects to handle and the lookup field on each object to set to the new account ID</description>
    <label>Lead Convert Child Mapping</label>
    <pluralLabel>Lead Convert Child Mappings</pluralLabel>
</CustomObject>