force-app/main/default/src/objects/Lead_Convert_Child_Mapping_MVN__mdt/fields/Account_Lookup_Field_MVN__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup_Field_MVN__c</fullName>
    <description>The API Name of the account lookup field to set with the new account Id</description>
    <inlineHelpText>The API Name of the account lookup field to set with the new account Id</inlineHelpText>
    <label>Account Lookup Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>