force-app/main/default/src/objects/Lead_Convert_Child_Mapping_MVN__mdt/fields/Care_Plan_Lookup_Field_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Lookup_Field_MVN__c</fullName>
    <description>The lookup on the object to a care plan that should be set with the newly created care plan</description>
    <inlineHelpText>The lookup on the object to a care plan that should be set with the newly created care plan</inlineHelpText>
    <label>Care Plan Lookup Field</label>
    <length>43</length>
    <type>Text</type>
</CustomField>