force-app/main/default/src/objects/Lead_Convert_Child_Mapping_MVN__mdt/fields/Lead_Child_Object_Relationship_MVN__c.field-meta.xml
<CustomField>
    <fullName>Lead_Child_Object_Relationship_MVN__c</fullName>
    <description>The API name of the Child object relationship to parent to the converted account.</description>
    <inlineHelpText>The API name of the Child object relationship to parent to the converted account.</inlineHelpText>
    <label>Lead Child Object Relationship</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>